--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "node main.jsx"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.0",
@@ -19,6 +18,7 @@
     "firebase": "^9.22.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
