--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "start": "vite preview"
   },
   "dependencies": {
-    "vite": "^4.3.9",
     "@paypal/react-paypal-js": "^8.1.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
@@ -25,7 +24,8 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.14.1",
+    "vite": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
